Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ and <code>cookie_policy.context_processor.cookie_policy</code> to
 
 <p>In order to display the cookie policy banner, just add the following lines to your templates:</p>
 
-<p><code>{% if not cookie_accepted %}
-{% include 'cookie_policy/banner.html' %}
-{% endif %}</code></p>
+<pre lang="%"><code>{% include 'cookie_policy/banner.html' %}
+{% endif %}```
+</code></pre>
       </section>
     </div>
 
