Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ and <code>cookie_policy.context_processor.cookie_policy</code> to
 <li>
 <p>Include django-cookie-policy urls in <code>urls.py</code>::</p>
 
-<p>url(r'^cookies/', include('cookie_policy.urls'))</p>
+<p><code>url(r'^cookies/', include('cookie_policy.urls'))</code></p>
 </li>
 </ol>
 
@@ -79,7 +79,7 @@ and <code>cookie_policy.context_processor.cookie_policy</code> to
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("UA-23167770-64");
+              var pageTracker = _gat._getTracker("UA-23167770-65");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
